--- a/src/App.css
+++ b/src/App.css
@@ -4,13 +4,13 @@
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  height: 20vmin;
   pointer-events: none;
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 0vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -30,4 +30,10 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+input {  
+  height: 50px;
+  font-size: 2em;
+  width: 200px;
 }
